<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/updateInfo"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/pencil"
        android:title="@string/update"/>

    <item
        android:id="@+id/changePassword"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/logout"
        android:title="@string/change_password"/>
    <item
        android:id="@+id/request_bank"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/logout"
        android:title="@string/request_bank_account"/>

    <item
        android:id="@+id/favourites"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/logout"
        android:title="@string/favourites"/>
    <item
        android:id="@+id/history"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/logout"
        android:title="@string/history"/>

    <item
        android:id="@+id/booking"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/logout"
        android:title="@string/booking"/>
    <item
        android:id="@+id/notifications"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/logout"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/logout"
        android:title="@string/logout"/>


</menu>