<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingEnd="45dp"
    android:paddingStart="45dp">

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_request_bank_this_currency"
        android:textColor="#818386"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/amount_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/Amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/amount_of_money"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/country_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/country_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/country"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_no_fill_with_grey_border"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:text="@string/request"
            android:textColor="#808285"
            android:textSize="12sp"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_no_fill_with_grey_border"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:text="@string/cancel"
            android:textColor="#808285"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>