<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sarafizand.sarafizand.fragments.ProfileFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".75"
        android:background="@drawable/background_money" />

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="50dp"
        android:minWidth="50dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_profile"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/in_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="25dp"

                android:paddingRight="25dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/zand_logo" />

                <LinearLayout
                    android:id="@+id/linear_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="10"
                        android:src="@drawable/name" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/user_name_TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90">

                        <EditText
                            android:id="@+id/username"
                            style="@style/TvNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:hint="@string/name"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linear_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="10"
                        android:src="@drawable/calendar" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/date_TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90">

                        <EditText
                            android:id="@+id/DateOfBirth"
                            style="@style/TvNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:hint="@string/date_of_birth"
                            android:inputType="date" />


                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="10"
                        android:src="@drawable/phone" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phone_TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90">

                        <EditText
                            android:id="@+id/phone"
                            style="@style/TvNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:maxLength="10" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="10"
                        android:src="@drawable/card_id" />

                    <TextView
                        android:id="@+id/card_id"
                        style="@style/TvNormal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="90"
                        android:text="@string/upload_your_id_card" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <ImageView
                        android:id="@+id/imageIdCard"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />

                    <ImageView
                        android:id="@+id/no_card"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/no_card" />

                </RelativeLayout>


                <Button
                    android:id="@+id/updateButton"
                    style="@style/BtColored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/update_your_information"

                    />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone"

                    >

                    <TextView
                        style="@style/TvNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/already_a_member" />

                    <TextView
                        android:id="@+id/loginTextView"
                        style="@style/TvNormalColored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLaySignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDarkTeansparent"
        android:orientation="vertical">

        <TextView
            style="@style/TvNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignInimage"
            android:layout_centerHorizontal="true"
            android:text="@string/please_sign_in"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/SignInimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/card_id1" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.01"

            />

    </RelativeLayout>


</FrameLayout>
